[package]
name = "card-manager"
keywords = ["magic", "magicthegathering", "cli", "terminal"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.4"
anyhow = "1.0.43"
backtrace = "0.3.57"
crossterm = "0.20"
dirs = "3.0.2"
scryfall = "0.14.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "cmt"
